--- a/backend/user/templates/users/dashboard.html
+++ b/backend/user/templates/users/dashboard.html
@@ -2,5 +2,33 @@
 
 
 {% block content %}
+
+
 Current user: {{ user.username|default:"No one is logged in!" }}
+
+
+
+
+<h3>
+    <a href = "google.com"> Section 1 </a> |
+    <a href = "google.com"> Section 2 </a> |
+    <a href = "google.com"> Section 3 </a> |
+    <a href = "google.com"> Section 4 </a> | 
+    <a href = "google.com"> + </a> 
+</h3>
+
+<h4>Actions: Edit | Delete</h4>
+
+<h4> Description: </h4>
+
+What is this section for? How do you use it? Etc... 
+
+
+
+
+
+
+
+
+
 {% endblock %}
