can register users

--- a/backend/user/templates/base.html
+++ b/backend/user/templates/base.html
@@ -17,8 +17,9 @@ the thing, and this pretty much being my first app, I will make a basic front en
 {% endblock %}
 {% else %}
 
+No one is logged in!!
 
-LOGIN FORM
-
+<a href="/user/login"> LOGIN </a> |
+<a href="/user/register"> REGISTER </a>
 
 {% endif %}
